--- a/src/Form/barang.form
+++ b/src/Form/barang.form
@@ -348,9 +348,13 @@
           <Font name="Verdana" size="12" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
+          <StringArray count="6">
             <StringItem index="0" value="Makanan"/>
             <StringItem index="1" value="Minuman"/>
+            <StringItem index="2" value="Kosmetik"/>
+            <StringItem index="3" value="Pakaian"/>
+            <StringItem index="4" value="Elektronik"/>
+            <StringItem index="5" value="Alat Mandi"/>
           </StringArray>
         </Property>
       </Properties>
